# dwm_status

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/components/: cpu.rs  date.rs  mod.rs  mpd.rs  network.rs  ram.rs  rand_num.rs
